new margin-right for projetcs

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ body {
 }
 .jobs-links-all{
     margin-left: 105px;
+    margin-right: 30px;
     margin-top: 15px;
     font-size: 14px;
     font-weight: 700;
