--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,18 @@
     box-sizing: border-box;
 }
 
+@media print {
+    .sidebar {
+        background: black;
+    }
+    .main-container {
+        padding-left: 0px;
+        padding-top: 10px;
+        padding-bottom: 0px;
+        padding-right: 0px ;
+    }
+}
+
 .wrapper {
     background: #ffffff;
     display: flex;
@@ -26,10 +38,10 @@ body {
     width: 370px;
 }
 .main-container {
-     padding-left: 90px;
-     padding-top: 110px;
-     padding-bottom: 100px;
-     padding-right: 90px ;
+    padding-left: 0px;
+    padding-top: 40px;
+    padding-bottom: 0px;
+    padding-right: 0px ;
 }
 .contacts {
     margin-left: 40px;
@@ -102,7 +114,7 @@ body {
     margin-left: 90px;
 }
 .name {
-    font-size: 45px;
+    font-size: 30px;
     font-weight: 700;
     line-height: 89px;
     margin-bottom: 25px;
